make AvailableHotels as Iterable